# keysync

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CI.md  DEVELOPMENT_LOG.md  DOCUMENTATION_INDEX.md  FRONTEND.md  PERSISTENCE.md  PROVIDERS.md  SESSION_HANDOFF.md  STREAMING.md  SYNC.md  VAULT.md
provider-templates/: defaults.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_message_sequence.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  conversations.rs  mod.rs  models.rs  providers.rs  settings.rs  sync.rs  vault.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  http.rs  mod.rs  openai.rs  openai_compatible.rs  openai_responses.rs  types.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/vault/: crypto.rs  keychain.rs  mod.rs  store.rs
src/components/: WebDavSyncCard.tsx
src/data/: providerTemplates.ts
src/hooks/: useChatStreamEvents.ts  useConversations.ts
src/lib/: chat.ts  tauri.ts
